tests/samples/negative/types/empty_tuple_type.ax
module empty_tuple_type;

type Empty = ();

fn main() -> i32 {
    return 0;
}
